--- a/cdn-cgi/l/email-protection.html
+++ b/cdn-cgi/l/email-protection.html
@@ -10,7 +10,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" />
 <meta name="robots" content="noindex, nofollow" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="stylesheet" id="cf_styles-css" href="https://reiyuura.xyz/cdn-cgi/styles/cf.errors.css" type="text/css" media="screen,projection" />
+<link rel="stylesheet" id="cf_styles-css" href="https://reiyuura.me/cdn-cgi/styles/cf.errors.css" type="text/css" media="screen,projection" />
 <!--[if lt IE 9]><link rel="stylesheet" id='cf_styles-ie-css' href="/cdn-cgi/styles/cf.errors.ie.css" type="text/css" media="screen,projection" /><![endif]-->
 <style type="text/css">body{margin:0;padding:0}</style>
 
@@ -34,13 +34,13 @@
     <div id="cf-error-details" class="cf-error-details-wrapper">
       <div class="cf-wrapper cf-header cf-error-overview">
         <h1 data-translate="block_headline">Email Protection</h1>
-        <h2 class="cf-subheadline"><span data-translate="unable_to_access">You are unable to access this email address</span> moepoi.dev</h2>
+        <h2 class="cf-subheadline"><span data-translate="unable_to_access">You are unable to access this email address</span> Reiyuura</h2>
       </div><!-- /.header -->
 
       <div class="cf-section cf-wrapper">
         <div class="cf-columns two">
           <div class="cf-column">
-            <p>The website from which you got to this page is protected by Cloudflare. Email addresses on that page have been hidden in order to keep them from being accessed by malicious bots. <strong>You must enable Javascript in your browser in order to decode the e-mail address</strong>.</p>
+            <p>The website from which you got to this page is protected by Cloudflare. Email addresses on that page have been hidden in order to keep them from being accessed by malicious bots. <strong>You must enable Javascript in your browser in order to decode the e-mail address</strong></p>
             <p>If you have a website and are interested in protecting it in a similar way, you can <a rel="noopener noreferrer" href="https://www.cloudflare.com/sign-up?utm_source=email_protection">sign up for Cloudflare</a>.</p>
           </div>
 
@@ -61,9 +61,9 @@
 
       <div class="cf-error-footer cf-wrapper w-240 lg:w-full py-10 sm:py-4 sm:px-8 mx-auto text-center sm:text-left border-solid border-0 border-t border-gray-300">
   <p class="text-13">
-    <span class="cf-footer-item sm:block sm:mb-1">Cloudflare Ray ID: <strong class="font-semibold">6765c1743b7dfa60</strong></span>
+    <span class="cf-footer-item sm:block sm:mb-1">Cloudflare Ray ID: <strong class="font-semibold"></strong></span>
     <span class="cf-footer-separator sm:hidden">&bull;</span>
-    <span class="cf-footer-item sm:block sm:mb-1"><span>Your IP</span>: 52.209.215.119</span>
+    <span class="cf-footer-item sm:block sm:mb-1"><span>Your IP</span></span>
     <span class="cf-footer-separator sm:hidden">&bull;</span>
     <span class="cf-footer-item sm:block sm:mb-1"><span>Performance &amp; security by</span> <a rel="noopener noreferrer" href="https://www.cloudflare.com/5xx-error-landing" id="brand_link" target="_blank">Cloudflare</a></span>
     
