--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 												<li> <span class="label">
                                                         <i class="fas fa-angle-double-right"></i><span>Email</span>
 													</span> <span class="dash">-</span>
-													<span class="value">yuiireichi@gmail.com</span>
+													<span class="value">me.reiyuura@gmail.com</span>
 												</li>
 												<!-- Single Content On Profile Ends -->
 												<!-- Single Content On Profile Starts -->
@@ -269,7 +269,7 @@
 											<ul>
 												<!-- Single Social Media Starts -->
 												<li>
-													<a href="https://t.me/FReiyuura"> <span class="front">
+													<a href="https://t.me/reiyuurach"> <span class="front">
                                                             <i class="fab fa-telegram-plane"></i>
                                                         </span>
 														<span class="back">
@@ -658,13 +658,13 @@
 												<div class="item utility col-md-4 col-sm-6 col-12" style="position: absolute; left: 0px; top: 0px;">
 													<!-- Image Starts -->
 													<div class="image">
-														<img src="assets/img/projects/yt-downloader.png" alt="YT Downloader Bot">
+														<img src="assets/img/projects/reia-mirror.png" alt="Mirror Bot">
 													</div>
 													<!-- Image Ends -->
 													<!-- Overlay Starts -->
 													<div class="overlay">
 														<!-- View More (Button) Starts -->
-														<a class="view-more" href="#ytdl-bot"> <span class="front">
+														<a class="view-more" href="#mirror-bot"> <span class="front">
                                                                 <i class="far fa-eye"></i><span class="value">
                                                                     View
                                                                     <span>More</span>
@@ -679,7 +679,7 @@
 														<!-- View More (Button) Ends -->
 														<!-- Image Info Starts -->
 														<div class="image-info">
-															<!-- Project Name Starts --> <span class="project-name">YT Downloader Bot</span>
+															<!-- Project Name Starts --> <span class="project-name">Reia Mirror Bot</span>
 															<!-- Project Name Ends -->
 															<!-- Project Tags Starts --> <span class="project-tags">
                                                                 <!-- Tag Icon Starts -->
@@ -696,12 +696,12 @@
 													</div>
 													<!-- Overlay Ends -->
 													<!-- Project Popup Starts -->
-													<div id="ytdl-bot" class="project-popup mfp-hide">
+													<div id="mirror-bot" class="project-popup mfp-hide">
 														<!-- Project Picture On Popup Starts -->
-														<img class="project-picture" src="assets/img/projects/yt-downloader.png" alt="YT Downloader Bot">
+														<img class="project-picture" src="assets/img/projects/reia-mirror.png" alt="Reia Mirror Bot">
 														<!-- Project Picture On Popup Ends -->
 														<!-- Project Name Starts -->
-														<h5 class="project-name">YT Downloader Bot</h5>
+														<h5 class="project-name">Reia Mirror Bot</h5>
 														<!-- Project Name Ends -->
 														<!-- Project Info Starts -->
 														<div class="project-info">
@@ -710,7 +710,7 @@
 																<!-- Single List Starts -->
 																<li> <span class="label">Date</span>
 																	<span class="separator">:</span>
-																	<span class="value">23 Juni 2021</span>
+																	<span class="value">30 Januari 2022</span>
 																</li>
 																<!-- Single List Ends -->
 																<!-- Single List Starts -->
@@ -724,14 +724,14 @@
 															<!-- Project Description Starts -->
 															<div class="project-description">
 																<!-- Single Paragraph Starts -->
-																<p>Telegram bot that allows you to downloading YouTube Video or Audio.</p>
+																<p>Mirror Telegram Bot to Google Drive, Support with torrent file :).</p>
 																<!-- Single Paragraph Ends -->
 															</div>
 															<!-- Project Description Ends -->
 														</div>
 														<!-- Project Info Ends -->
 														<!-- Project Source Button Starts -->
-														<a class="project-source" href="https://t.me/Rei_Ytdl_Bot"> <span class="front">
+														<a class="project-source" href="https://t.me/+3jkWuzvKhd8zNWVl"> <span class="front">
                                                                 <i class="fas fa-long-arrow-alt-right"></i>
                                                                 <span class="value">Visit <span>Project</span></span>
 															</span> <span class="back">
@@ -1262,7 +1262,7 @@
 													<span class="icon-of-value">
                                                         <i class="fas fa-envelope"></i>
                                                     </span>
-													<span class="value">yuiireichi@gmail.com</span>
+													<span class="value">me.reiyuura@gmail.com</span>
 												</li>
 												<!-- Single Contact Info Ends -->
 												<!-- Single Contact Info Starts -->
@@ -1270,7 +1270,7 @@
 													<span class="icon-of-value">
                                                         <i class="fas fa-globe"></i>
                                                     </span>
-													<span class="value"><a href='#ComingSoon'>reiyuura.xyz</a></span>
+													<span class="value"><a href='https://reiyuura.me'>reiyuura.me</a></span>
 												</li>
 												<!-- Single Contact Info Ends -->
 												<!-- Single Contact Info Starts -->
@@ -1278,7 +1278,7 @@
 													<ul class="social-media">
 														<!-- Single Social Media Starts -->
 														<li>
-															<a href="https://t.me/FReiyuura"> <span class="front">
+															<a href="https://t.me/reiyuurach"> <span class="front">
                                                                     <i class="fab fa-telegram-plane"></i>
                                                                 </span>
 																<span class="back">
@@ -1346,7 +1346,7 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/typeit@6.1.1/dist/typeit.min.js"></script>
 	<script src="assets/js/custom.js"></script>
-	<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "c5c41f4f82e94cc9ab5a895413974e58"}'></script><!-- End Cloudflare Web Analytics -->
+	<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "69edd95a6a744d0e91518c3923fcde80"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 
 </html>
