--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!-- Keywords -->
 	<meta name="keywords" content="Reiyuura, Personal Page, Portfolio, Anime">
 	<!-- Title -->
-	<title>Reiyuura :)</title>
+	<title>Zeus :)</title>
 	<!-- Google Fonts -->
 	<link href="assets/css/css.css" rel="stylesheet">
 	<!-- CSS Files -->
